[gd_scene load_steps=11 format=3 uid="uid://bblmx4y7y2nui"]

[ext_resource type="Script" path="res://sabana_level5.gd" id="1_cpneg"]
[ext_resource type="Texture2D" uid="uid://lpfvsergyxtu" path="res://sprites/Narasi safana1/wanderlust-summer-landscape-painting-background 3.png" id="1_gsbnu"]
[ext_resource type="Texture2D" uid="uid://c71fuoq3qrl4k" path="res://sprites/Nomor 5 sabana/Group 16.png" id="2_3yoqo"]
[ext_resource type="Texture2D" uid="uid://tbwnrddsvdq8" path="res://sprites/Nomor 5 sabana/Aves.png" id="3_b1e8k"]
[ext_resource type="Texture2D" uid="uid://732gxkfp0454" path="res://sprites/Nomor 5 sabana/Group 170.png" id="4_7ai66"]
[ext_resource type="Texture2D" uid="uid://blso84n0mhdjg" path="res://sprites/Nomor 5 sabana/Group 17.png" id="5_dypq2"]
[ext_resource type="Texture2D" uid="uid://dxr25g13bilib" path="res://sprites/Nomor 5 sabana/Group 169.png" id="6_oui8m"]
[ext_resource type="Texture2D" uid="uid://bxq74hvd5nrw4" path="res://sprites/Nomor 5 sabana/Group 8.png" id="7_pxaco"]
[ext_resource type="Texture2D" uid="uid://dh3cowewi5y2i" path="res://sprites/Nomor 5 sabana/Group 168.png" id="8_d4lff"]
[ext_resource type="Texture2D" uid="uid://ianxm4s3k3ge" path="res://sprites/Nomor 5 sabana/WhatsApp Image 2024-05-15 at 19.51 3.png" id="9_rehpp"]

[node name="Node" type="Node"]
script = ExtResource("1_cpneg")

[node name="Wanderlust-summer-landscape-painting-background3" type="Sprite2D" parent="."]
position = Vector2(666, 278)
scale = Vector2(1.2037, 1.36929)
texture = ExtResource("1_gsbnu")

[node name="Level2" type="Sprite2D" parent="."]
position = Vector2(632.75, 254.25)
scale = Vector2(0.881395, 0.860341)
texture = ExtResource("2_3yoqo")

[node name="choiceAbutton" type="TextureButton" parent="."]
offset_left = 66.0
offset_top = 466.0
offset_right = 477.0
offset_bottom = 626.0
texture_normal = ExtResource("3_b1e8k")
texture_pressed = ExtResource("4_7ai66")
texture_hover = ExtResource("4_7ai66")

[node name="choiceBbutton" type="TextureButton" parent="."]
offset_left = 491.0
offset_top = 472.0
offset_right = 787.0
offset_bottom = 632.0
texture_normal = ExtResource("5_dypq2")
texture_pressed = ExtResource("6_oui8m")
texture_hover = ExtResource("6_oui8m")

[node name="choiceCbutton" type="TextureButton" parent="."]
offset_left = 801.0
offset_top = 472.0
offset_right = 1138.0
offset_bottom = 632.0
texture_normal = ExtResource("7_pxaco")
texture_pressed = ExtResource("8_d4lff")
texture_hover = ExtResource("8_d4lff")

[node name="WhatsAppImage2024-05-15At19_513" type="Sprite2D" parent="."]
position = Vector2(642, 223)
texture = ExtResource("9_rehpp")
